placeholders and btns to nav thru module type vid & 'x'

--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -618,6 +618,11 @@ body{
   }
 }
 
+[contenteditable=true]:empty:before{
+  content: attr(placeholder);
+  display: block; /* For Firefox */
+}
+
 
 
 
