--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -17,7 +17,7 @@
     <section id="wrapper" class="pusher">
       <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-gear"></i></a>
       
-        <div id="flash_container">
+        <div id="flash_container" class="container-fluid">
           <%= render '/refinery/no_script' %>
           <%= render '/refinery/message' %>
         </div>
