--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -98,12 +98,12 @@ body{
 
 #flash_container{
   padding: 0;
+  max-width: 1200px;
   #flash{
-    margin: 30px 0;
+    margin: 0 15px 30px 15px;
+    display: block;
     padding: 10px 15px;
-    background: $off-white;
-    border: 1px solid $grey-2;
-    margin: 45px 60px 0;
+    background: $grey-1;
     #flash_close{
       float: right;
     }
@@ -182,6 +182,7 @@ body{
         margin-bottom: 2px;
         background: $white;
         padding: 0 15px;
+        display: flex;
         &:hover{
           background: $primary-hover;
           .gcicon{
