--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -4,16 +4,16 @@
     <div class="col-sm-12">
       <div class="contextual-menu">
         <button class="btn btn-link-grey">
-          <span class="hidden-xs">Filter</span> <i class="gcion gcicon-filter bump-down-2"></i>
+          <i class="gcion gcicon-filter bump-down-2"></i> <span class="hidden-xs">Filter</span>
         </button>
         <button class="btn btn-link-grey">
-          <span class="hidden-xs">Sort</span> <i class="gcicon gcicon-sort"></i>
+          <i class="gcicon gcicon-sort"></i> Sort by: Newest <i class="gcicon gcicon-down"></i>
         </button>
         <button class="btn btn-link-grey">
-          <span class="hidden-xs">Reorder</span> <i class="gcicon gcicon-reorder"></i> 
+          <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs">Reorder</span> 
         </button>
         <button class="btn btn-link-grey">
-          <span class="hidden-xs">Add page</span> <i class="gcicon gcicon-add"></i> 
+          <i class="gcicon gcicon-add"></i> <span class="hidden-xs">Add page</span>
         </button>
         <div class="search">
           <div class="input-group">
