--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -3,14 +3,14 @@
     <% if page.children.present? %>
       <% if Refinery::Pages.auto_expand_admin_tree %>
         <a class="child-toggle" data-toggle="collapse" href="#child-pages" aria-expanded="false" aria-controls="child-pages">
-          <i class="gcicon gcicon-folder-open"></i>
-          <i class="gcicon gcicon-folder"></i>
+          <i class="status-icon gcicon gcicon-folder-open"></i>
+          <i class="status-icon gcicon gcicon-folder"></i>
         </a>
       <% else %>
-        <i class="gcicon gcicon-folder toggle"></i>
+        <i class="status-icon gcicon gcicon-folder toggle"></i>
       <% end %>
     <% else %>
-      <i class="gcicon gcicon-file"></i>
+      <i class="status-icon gcicon gcicon-file"></i>
     <% end %>
   
     <a href="<%= refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)) %>" class="page-title">
@@ -27,24 +27,29 @@
           <% end %>
         </span>
       <% end %>
+      
+      
+      <!-- ADDITIONAL ATTRIBUTE -->
+      <!--
+      <span class="attribute">
+        some attribute
+      </span>
+      -->
+
     </a>
     
-    <span class="secondary-attribute">
+    <!-- ADDITIONAL ATTRIBUTE -->
+    <!--
+    <a href="" class="attribute">
       some attribute
-    </span>
+    </a>
+    -->
     
     <span class="date">
-      2014/04/09
+      Jan 25, 2014
     </span>
     
-    <span class='actions'>          
-      <span class="edit">
-        <%= link_to '<i class="gcicon gcicon-edit bump-right"></i>'.html_safe,
-                  refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)),
-                  :class => "circle-icon",
-                  :title => t('edit', :scope => 'refinery.admin.pages') %>
-      </span>
-           
+    <span class='actions'>                 
       <span class="add-child">           
         <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe,
                   refinery.new_admin_page_path(:parent_id => page.id),
@@ -53,7 +58,7 @@
       </span>
       
       <span class="delete">
-        <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-trash bump-up"></i>'.html_safe,
                   refinery.admin_page_path(page.nested_url),
                   :class => "cancel confirm-delete circle-icon",
                   :title => t('delete', :scope => 'refinery.admin.pages'),
