--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -10,6 +10,10 @@
       <div id="sidebar-left-inner">
         <%= render 'refinery/admin/menu' %>
       </div>
+      <div class="log-out">
+        <%= link_to (t('.log_out', site_bar_translate_locale_args) + ' <i class="gcicon gcicon-log-out"></i>').html_safe,
+                refinery.logout_path, :id => 'logout' %>
+      </div>
     </section>
 
     <section id="wrapper" class="pusher">
