--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -4,10 +4,10 @@
     <div class="col-sm-12">
       <div class="contextual-menu">
         <button class="btn btn-link-grey">
-          <i class="gcion gcicon-filter bump-down-2"></i> <span class="hidden-xs">Filter</span>
+          <i class="gcicon gcicon-filter"></i> <span class="hidden-xs">Filter</span>
         </button>
         <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-sort"></i> Sort by: Newest <i class="gcicon gcicon-down"></i>
+          <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <i class="gcicon gcicon-down"></i>
         </button>
         <button class="btn btn-link-grey">
           <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs">Reorder</span> 
