--- a/app/views/refinery/admin/_menu.html.erb
+++ b/app/views/refinery/admin/_menu.html.erb
@@ -1,29 +1,27 @@
-<nav id="sidebar-left-nav" class="sidebar-nav">
+<div class="site-name">
   <%= link_to Refinery::Core.site_name, '/' %>
-  <ul class="list-unstyled">
-    <!-- NOTE: refinery/glass/plugin_sorter.rb helps with this sorting -->
-    <% ::Refinery::Plugins.active.in_menu.find_all{|p| p.position > 0}.sort_by {|p| p.position}.each do |plugin| -%>
-      <li>
-        <% plugin_title = (!current_refinery_user.has_role?(:superuser) && plugin.name == 'orgs') ? current_refinery_user.org.name : plugin.title %>
-        <%= link_to plugin_title, refinery.url_for(plugin.url),
-          :class => ("active" if plugin.highlighted?(params)),
-          :id => "plugin_#{plugin.name}" %>
-        <% if plugin.highlighted?(params) %>
-          <%= yield :admin_submenu %>
-        <% end %>
-      </li>
-    <% end -%>
-    <% if ::Refinery::Plugins.active.in_menu.many? -%>
-      <%#= link_to refinery_icon_tag('arrow_switch.png'), "",
-        :id => "menu_reorder",
-        :title => t('.reorder_menu') %>
+</div>
+<ul class="list-unstyled">
+  <!-- NOTE: refinery/glass/plugin_sorter.rb helps with this sorting -->
+  <% ::Refinery::Plugins.active.in_menu.find_all{|p| p.position > 0}.sort_by {|p| p.position}.each do |plugin| -%>
+    <li>
+      <% plugin_title = (!current_refinery_user.has_role?(:superuser) && plugin.name == 'orgs') ? current_refinery_user.org.name : plugin.title %>
+      <%= link_to plugin_title, refinery.url_for(plugin.url),
+        :class => ("active" if plugin.highlighted?(params)),
+        :id => "plugin_#{plugin.name}" %>
+      <% if plugin.highlighted?(params) %>
+        <%= yield :admin_submenu %>
+      <% end %>
+    </li>
+  <% end -%>
+  <% if ::Refinery::Plugins.active.in_menu.many? -%>
+    <%#= link_to refinery_icon_tag('arrow_switch.png'), "",
+      :id => "menu_reorder",
+      :title => t('.reorder_menu') %>
 
-      <%#= link_to refinery_icon_tag('tick.png'), "",
-        :id => "menu_reorder_done",
-        :title => t('.reorder_menu_done'),
-        :style => "display: none;" %>
-    <% end %>
-  </ul>
-  <%= link_to (t('.log_out', site_bar_translate_locale_args) + ' <i class="gcicon gcicon-log-out"></i>').html_safe,
-            refinery.logout_path, :id => 'logout' %>
-</nav>
+    <%#= link_to refinery_icon_tag('tick.png'), "",
+      :id => "menu_reorder_done",
+      :title => t('.reorder_menu_done'),
+      :style => "display: none;" %>
+  <% end %>
+</ul>
