--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -9,8 +9,11 @@
         <button class="btn btn-link-grey">
           <span class="hidden-xs">Sort</span> <i class="gcicon gcicon-sort"></i>
         </button>
-        <button class="btn btn-link-grey">
+        <button id='reorder_action' class="btn btn-link-grey">
           <span class="hidden-xs">Reorder</span> <i class="gcicon gcicon-reorder"></i> 
+        </button>
+        <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
+          <span class="hidden-xs">Done</span> <i class="gcicon gcicon-reorder"></i> 
         </button>
         <button class="btn btn-link-grey">
           <span class="hidden-xs">Add page</span> <i class="gcicon gcicon-add"></i> 
