--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -2,7 +2,7 @@
   <div class="page-row" role="tab" id="parent-1">
     <% if page.children.present? %>
       <% if Refinery::Pages.auto_expand_admin_tree %>
-        <a class="child-toggle" data-toggle="collapse" href="#child-pages" aria-expanded="false" aria-controls="child-pages">
+        <a class="child-toggle" data-toggle="collapse" href="#<%= dom_id(page) -%>_children">
           <i class="gcicon gcicon-folder-open"></i>
           <i class="gcicon gcicon-folder"></i>
         </a>
@@ -71,8 +71,8 @@
 
   
   <!-- This needs to be one line of code as the css looks for the empty state. Spaces interfere. -->
-  <div id="child-pages" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="parent-1">
-    <ul class='nested list-unstyled' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>"><%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %></ul>
-  </div>
+  <!-- <div id="child-pages" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="parent-1"> -->
+    <ul id="<%= dom_id(page) -%>_children" class='nested list-unstyled panel-collapse collapse in' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>"><%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %></ul>
+  <!-- </div> -->
 
 </li>
