--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -6,7 +6,7 @@
   </head>
   <body class="<%= action_name %> <%= I18n.locale %>">
 
-    <section id="sidebar-left" class="ui large inverted vertical sidebar menu">
+    <section id="sidebar-left" class="ui sidebar overlay">
       <div id="sidebar-left-inner">
         <%= render 'refinery/admin/menu' %>
       </div>
