--- a/app/views/refinery/admin/_menu.html.erb
+++ b/app/views/refinery/admin/_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="site-name">
-  <%= link_to Refinery::Core.site_name, '/' %>
+  <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <%= link_to Refinery::Core.site_name, '/' %>
 </div>
 <ul class="list-unstyled">
   <!-- NOTE: refinery/glass/plugin_sorter.rb helps with this sorting -->
