--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -7,6 +7,9 @@
   <body class="<%= action_name %> <%= I18n.locale %>">
 
     <section id="sidebar-left" class="ui sidebar overlay">
+      <div class="site-name">
+        <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <%= link_to Refinery::Core.site_name, '/' %>
+      </div>
       <div id="sidebar-left-inner">
         <%= render 'refinery/admin/menu' %>
       </div>
