--- a/app/views/refinery/admin/_head.html.erb
+++ b/app/views/refinery/admin/_head.html.erb
@@ -1,5 +1,5 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title><%= Refinery::Core.site_name -%> - Refinery</title>
+<title>Elephant - <%= Refinery::Core.site_name -%></title>
 <%= csrf_meta_tags %>
 <%#= stylesheet_link_tag 'refinery/refinery' %>
 <% custom_stylesheets.each do |css| %>
