--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -178,12 +178,21 @@ body{
 
 .login{
   background: $off-white;
-  padding-top: 120px;
+  padding-top: 90px;
   @media (max-width: 767px) {
     padding-top: 45px;  
   }
+  .elephant-cms-logo{
+    max-width: 150px;
+  }
   h2{
     margin-bottom: 30px;
+  }
+  form{
+    margin-bottom: 120px;
+    .form-group{
+      margin-bottom: 15px;
+    }
   }
 }
 
