--- a/app/views/refinery/admin/_form_actions.html.erb
+++ b/app/views/refinery/admin/_form_actions.html.erb
@@ -43,7 +43,7 @@
     <%= submit_tag submit_button_text,
                    :id => submit_button_id,
                    :name => nil,
-                   :class => "wymupdate btn btn-primary",
+                   :class => "wymupdate btn btn-primary btn-lg",
                    :tooltip => submit_button_title unless hide_submit %>
 
     <%= render '/refinery/admin/continue_editing', :f => f if continue_editing -%>
