--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -193,6 +193,14 @@ body{
     .form-group{
       margin-bottom: 15px;
     }
+    .checkbox{
+      label{
+        padding-top: 5px;
+      }
+      input[type="checkbox"]{
+        margin-top: 7px;
+      }
+    }
   }
 }
 
