--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -149,7 +149,7 @@ body{
 
 #wrapper{
   background: lighten($off-white, 2%) !important;
-  padding: 60px 0;
+  padding: 65px 0;
 }
 
 .contextual-menu{
@@ -167,8 +167,12 @@ body{
     width: 100%;
   }
   .btn{
+    font-weight: 300;
     .gcicon{
       color: $grey-3;
+    }
+    strong{
+      font-weight: 500;
     }
   }
 }
@@ -453,7 +457,7 @@ body{
       }
       .active{
         border-right: 2px solid $primary-color;
-        background: $white-opaque;
+        background: lighten($off-white, 6%);
       }
       ul{
         padding-top: 1px;
@@ -463,7 +467,7 @@ body{
             padding: 4px 15px 4px 30px;
             font-size: 13px;
             font-weight: 400;
-            background: $white-opaque;
+            background: lighten($off-white, 3%);
           }
         }
       }
