--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -4,19 +4,19 @@
     <div class="col-sm-12">
       <div class="contextual-menu">
         <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-filter"></i> <span class="hidden-xs">Filter</span>
+          <i class="gcicon gcicon-filter"></i> <span class="hidden-xs"><strong>Filter</strong></span>
         </button>
         <button class="btn btn-link-grey">
           <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <i class="gcicon gcicon-down"></i>
         </button>
         <button id='reorder_action' class="btn btn-link-grey">
-          <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs">Reorder</span>
+          <i class="gcicon gcicon-reorder bump-down"></i> <span class="hidden-xs"><strong>Reorder</strong></span>
         </button>
         <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
-          <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs">Done</span>
+          <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs"><strong>Done</strong></span>
         </button>
         <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-add"></i> <span class="hidden-xs">Add page</span>
+          <i class="gcicon gcicon-add"></i> <span class="hidden-xs"><strong>Add page</strong></span>
         </button>
         <div class="search">
           <div class="input-group">
