--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -2,13 +2,37 @@
 <section class="admin-index container-fluid">
   <div class="row">
     <div class="col-sm-12">
+      <h2 class="admin-title">Pages</h2>
       <div class="contextual-menu">
-        <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-filter"></i> <span class="hidden-xs"><strong>Filter</strong></span>
-        </button>
-        <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <i class="gcicon gcicon-down"></i>
-        </button>
+        
+        
+        <!-- FILTERING -->
+        <!--
+<div class="dropdown">
+          <button class="btn btn-link-grey" type="button" id="dropdown-filter" data-toggle="dropdown" aria-expanded="true">
+            <i class="gcicon gcicon-filter"></i> Filter by: <strong>Cats</strong> <span class="caret"></span>
+          </button>        
+          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-filter">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Newest</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest </a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Alphabetical</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reverse Alphabetical</a></li>
+          </ul>
+        </div>  
+-->
+        
+        <div class="dropdown">
+          <button class="btn btn-link-grey" type="button" id="dropdown-sort" data-toggle="dropdown" aria-expanded="true">
+            <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <span class="caret"></span>
+          </button>        
+          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-sort">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort"></i> Newest</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-two"></i> Oldest </a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha"></i> Alphabetical</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha-two"></i> Reverse Alphabetical</a></li>
+          </ul>
+        </div>    
+          
         <button id='reorder_action' class="btn btn-link-grey">
           <i class="gcicon gcicon-reorder bump-down"></i> <span class="hidden-xs"><strong>Reorder</strong></span>
         </button>
