--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -677,6 +677,17 @@ body{
   }
 }
 
+.reordering{
+  .page-row{
+    &:hover{
+      
+    }
+    .actions{
+      display: none;
+    }
+  }
+}
+
 
 
 /* -------------------- EDITOR -------------------- */
