--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -153,7 +153,7 @@ body{
 }
 
 .admin-title{
-  margin: 0 0 45px;
+  margin: 15px 0 45px;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 2px;
