--- a/app/views/refinery/admin/users/_user.html.erb
+++ b/app/views/refinery/admin/users/_user.html.erb
@@ -1,13 +1,7 @@
 <li class='page-listing' id="<%= dom_id(user) -%>">
   <div class="page-row">
-    <% if current_refinery_user.can_edit?(user) %>
-    <a href="<%= refinery.edit_admin_user_path(user) %>" class="page-title">
-    <% end %>
-      <i class="gcicon gcicon-file"></i>
-      <%= "#{user.username}" %>
-    <% if current_refinery_user.can_edit?(user) %>
-    </a>
-    <% end %>
+    <i class="gcicon gcicon-file"></i>
+    <%= link_to user.username, current_refinery_user.can_edit?(user) ? refinery.edit_admin_user_path(user) : '#', :class => 'page-title' %>
     <span class='actions'>
       <span class="delete">                  
         <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.admin_user_path(user),
