adding image upload functionality to events form

--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -29,6 +29,10 @@ img.pull-left{
 	margin-bottom: 30px;
 }
 
+#image-upload-form {
+  position: absolute;
+  top: -100px;
+}
 
 /* -------------------- MAIN -------------------- */
 
