--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -4,44 +4,44 @@
     <div class="col-sm-12">
       <h2 class="admin-title">Pages</h2>
       <div class="contextual-menu">
-        
-        
-        <!-- FILTERING -->
-        <!--
-<div class="dropdown">
-          <button class="btn btn-link-grey" type="button" id="dropdown-filter" data-toggle="dropdown" aria-expanded="true">
-            <i class="gcicon gcicon-filter"></i> Filter by: <strong>Cats</strong> <span class="caret"></span>
-          </button>        
-          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-filter">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Newest</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest </a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Alphabetical</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reverse Alphabetical</a></li>
-          </ul>
-        </div>  
--->
-        
-        <div class="dropdown">
-          <button class="btn btn-link-grey" type="button" id="dropdown-sort" data-toggle="dropdown" aria-expanded="true">
-            <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <span class="caret"></span>
-          </button>        
-          <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-sort">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort"></i> Newest</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-two"></i> Oldest </a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha"></i> Alphabetical</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha-two"></i> Reverse Alphabetical</a></li>
-          </ul>
-        </div>    
+        <div class="contextual-options">
           
-        <button id='reorder_action' class="btn btn-link-grey">
-          <i class="gcicon gcicon-reorder bump-down"></i> <span class="hidden-xs"><strong>Reorder</strong></span>
-        </button>
-        <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
-          <i class="gcicon gcicon-reorder"></i> <span class="hidden-xs"><strong>Done</strong></span>
-        </button>
-        <button class="btn btn-link-grey">
-          <i class="gcicon gcicon-add"></i> <span class="hidden-xs"><strong>Add page</strong></span>
-        </button>
+          <!-- FILTERING -->
+          <!--
+  <div class="dropdown">
+            <button class="btn btn-link-grey" type="button" id="dropdown-filter" data-toggle="dropdown" aria-expanded="true">
+              <i class="gcicon gcicon-filter"></i> Filter by: <strong>Cats</strong> <span class="caret"></span>
+            </button>        
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-filter">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Newest</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Oldest </a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Alphabetical</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Reverse Alphabetical</a></li>
+            </ul>
+          </div>  
+  -->
+          
+          <div class="dropdown">
+            <button class="btn btn-link-grey" type="button" id="dropdown-sort" data-toggle="dropdown" aria-expanded="true">
+              <i class="gcicon gcicon-sort"></i> Sort by: <strong>Newest</strong> <span class="caret"></span>
+            </button>        
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdown-sort">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort"></i> Newest</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-two"></i> Oldest </a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha"></i> Alphabetical</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><i class="gcicon gcicon-sort-alpha-two"></i> Reverse Alphabetical</a></li>
+            </ul>
+          </div>     
+          <button id='reorder_action' class="btn btn-link-grey">
+            <i class="gcicon gcicon-reorder bump-down"></i> <strong>Reorder</strong>
+          </button>
+          <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
+            <i class="gcicon gcicon-reorder"></i> <strong>Done</strong>
+          </button>
+          <button class="btn btn-link-grey">
+            <i class="gcicon gcicon-add"></i> <strong>Add page</strong>
+          </button>
+        </div> 
         <div class="search">
           <div class="input-group">
             <input type="search" class="form-control" placeholder="Search">
